--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: #FBFFE4; /* */
-  --foreground: #3D8D7A; /* */
+  --background: #FBFFE4; 
+  --foreground: #3D8D7A; 
 }
 
 body {
-  color: var(--foreground); /* */
-  background: var(--background); /* */
+  color: var(--foreground); 
+  background: var(--background); 
   /* font-family: Arial, Helvetica, sans-serif; */
 }
 
